# mex-drop

./: .cruft.json  .dockerignore  .gitignore  .mypy.ini  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  Dockerfile  Makefile  README.md  compose.yaml  mex.bat  pyproject.toml  pytest.ini  requirements.txt  rxconfig.py
.github/workflows/: cookiecutter.yml  cve-scan.yml  docker.yml  documentation.yml  linting.yml  open-code.yml  opencode.yml  release.yml  renovatebot.yml  reviewing.yml  testing.yml
charts/mex-drop/: .helmignore  Chart.yaml  values.yaml
charts/mex-drop/templates/: _helpers.tpl  deployment.yaml  drop-database-credentials.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
docs/: conf.py  index.rst
mex/: mex.py
mex/drop/: api.py  exceptions.py  files_io.py  layout.py  logging.py  main.py  models.py  navigation.py  security.py  settings.py  state.py  types.py  utils.py
mex/drop/api/: main.py
mex/drop/file_history/: main.py  models.py  state.py
mex/drop/file_list/: main.py
mex/drop/login/: main.py  state.py
mex/drop/models/: user.py
mex/drop/sinks/: json.py
mex/drop/templates/: upload.html
mex/drop/types/: user_database.py
mex/drop/upload/: main.py  models.py  state.py
tests/: conftest.py  test_api.py  test_login.py  test_main.py  test_security.py  test_state.py  test_types.py
tests/api/: test_main.py
tests/file_history/: test_main.py  test_state.py
tests/login/: test_main.py  test_state.py
tests/sinks/: test_json.py
tests/test_files/: test.csv  test.xlsx  test.xml
tests/upload/: test_main.py  test_state.py
